# mainRep

./: .gitmodules  CMakeLists.txt
include/: hello.hpp  world.hpp
lib/: libadd.dylib
src/: CMakeLists.txt  hello.cpp  world.cpp
