project(cmake_test)
message(${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB_RECURSE files RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(srcfile IN LISTS files)
    get_filename_component(exc_file ${srcfile} NAME_WE)
    get_filename_component(filename ${srcfile} NAME)
    add_executable(${exc_file} ${filename})
    target_link_libraries(${exc_file} libadd.dylib)
endforeach()
